$Id$

Wishlist for future features
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

-> see bottom of this document


MIDIboxSEQ V4.095
~~~~~~~~~~~~~~~~~

   o introduced first "MBSEQV4+" function.
     MIDIbox SEQ V4+ is a special firmware variant for the STM32F4 core.
     It offers additional memory and/or CPU hungry functions which can't be implemented
     for STM32F1 or LPC17 due to resource limitations.
     These special functions are marked with "V4+" in future.

   o V4+: implemented CC layers for drum tracks.
     The CC numbers are statically assigned for all tracks of the session.
     They can be changed in the Options page (item 20/26)

   o trigger/layer edit views now also supported for drum tracks

   o reference step for pattern changes now works indpendent from reference step used for sync-to-measure

   o PATTERN page: pattern is switched immediately if SELECT button is pressed, regardless of
     the pattern change synchronisation option.

   o OPTIONS page: new option "Print and Modify Steps w/o changing Gate".
     If enabled: note values will always be print regardless if they are played or not.
     Changing a note value won't automatically enable the gate

   o OPTIONS page: new option "Print Notes with transposed value".
     Enabled by default (due to change in V4.093), can be optionally disabled now.

   o AOUT: MIDI Channel 9..12/13..15 now set the gate pins #1/3/5/7 as documented (previously it was #1/2/3/4 due to a code translation error)
     New: gate pins #2/4/6/8 are now set whenever the velocity is >100.
     This way the pins can be used as an accent trigger

   o V4+ AOUT: support for AOUT channel calibration.
     In the CV configuration menu, turn GP ENC #7 until 0V/1V/2V/.../Max will be visible.
     Calibrate the offset of the target value with ENC #8.
     Each V has a dedicated calibration value which can be configured this way, the output will be interpolated accordingly.