@@ -101,6 +101,26 @@ seq_hwcfg_button_t seq_hwcfg_button = {
   .direct_bookmark[14] = ((( 0   -1)<<3)+    0),
   .direct_bookmark[15] = ((( 0   -1)<<3)+    0),
 
+  //             SR   ignore    Pin
+  .enc[0]  =  ((( 0   -1)<<3)+    0), // Datawheel
+  .enc[1]  =  ((( 0   -1)<<3)+    0), // GP1
+  .enc[2]  =  ((( 0   -1)<<3)+    0), // GP2
+  .enc[3]  =  ((( 0   -1)<<3)+    0), // GP3
+  .enc[4]  =  ((( 0   -1)<<3)+    0), // GP4
+  .enc[5]  =  ((( 0   -1)<<3)+    0), // GP5
+  .enc[6]  =  ((( 0   -1)<<3)+    0), // GP6
+  .enc[7]  =  ((( 0   -1)<<3)+    0), // GP7
+  .enc[8]  =  ((( 0   -1)<<3)+    0), // GP8
+  .enc[9]  =  ((( 0   -1)<<3)+    0), // GP9
+  .enc[10] =  ((( 0   -1)<<3)+    0), // GP10
+  .enc[11] =  ((( 0   -1)<<3)+    0), // GP11
+  .enc[12] =  ((( 0   -1)<<3)+    0), // GP12
+  .enc[13] =  ((( 0   -1)<<3)+    0), // GP13
+  .enc[14] =  ((( 0   -1)<<3)+    0), // GP14
+  .enc[15] =  ((( 0   -1)<<3)+    0), // GP15
+  .enc[16] =  ((( 0   -1)<<3)+    0), // GP16
+  .enc[17] =  ((( 0   -1)<<3)+    0), // BPM
+
   //                 SR   ignore    Pin
   .par_layer[0] = ((( 3   -1)<<3)+    4),
   .par_layer[1] = ((( 3   -1)<<3)+    5),
